// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comment-in-comment.input.json 1`] = `
{
  "code": "PUG:UNEXPECTED_TOKEN",
  "line": 2,
  "msg": "\`comment\` encountered when already in a comment",
}
`;

exports[`comments.input.json 1`] = `
[
  {
    "line": 2,
    "type": "newline",
  },
  {
    "buffer": true,
    "line": 2,
    "type": "comment",
    "val": " foo",
  },
  {
    "line": 3,
    "type": "newline",
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "ul",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 2,
  },
  {
    "buffer": true,
    "line": 4,
    "type": "comment",
    "val": " bar",
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 5,
    "type": "text",
    "val": "one",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "buffer": true,
    "line": 6,
    "type": "comment",
    "val": " baz",
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 7,
    "type": "text",
    "val": "two",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "buffer": true,
    "line": 9,
    "type": "comment",
    "val": "",
  },
  {
    "line": 9,
    "type": "start-pipeless-text",
  },
  {
    "line": 10,
    "type": "text",
    "val": "ul",
  },
  {
    "line": 11,
    "type": "newline",
  },
  {
    "line": 11,
    "type": "text",
    "val": "  li foo",
  },
  {
    "line": 12,
    "type": "newline",
  },
  {
    "line": 12,
    "type": "text",
    "val": "",
  },
  {
    "line": 12,
    "type": "end-pipeless-text",
  },
  {
    "line": 13,
    "type": "newline",
  },
  {
    "buffer": true,
    "line": 13,
    "type": "comment",
    "val": " block",
  },
  {
    "line": 13,
    "type": "start-pipeless-text",
  },
  {
    "line": 14,
    "type": "text",
    "val": "// inline follow",
  },
  {
    "line": 15,
    "type": "newline",
  },
  {
    "line": 15,
    "type": "text",
    "val": "li three",
  },
  {
    "line": 16,
    "type": "newline",
  },
  {
    "line": 16,
    "type": "text",
    "val": "",
  },
  {
    "line": 16,
    "type": "end-pipeless-text",
  },
  {
    "line": 17,
    "type": "newline",
  },
  {
    "buffer": true,
    "line": 17,
    "type": "comment",
    "val": " block",
  },
  {
    "line": 17,
    "type": "start-pipeless-text",
  },
  {
    "line": 18,
    "type": "text",
    "val": "// inline followed by tags",
  },
  {
    "line": 19,
    "type": "newline",
  },
  {
    "line": 19,
    "type": "text",
    "val": "ul",
  },
  {
    "line": 20,
    "type": "newline",
  },
  {
    "line": 20,
    "type": "text",
    "val": "  li four",
  },
  {
    "line": 21,
    "type": "newline",
  },
  {
    "line": 21,
    "type": "text",
    "val": "",
  },
  {
    "line": 21,
    "type": "end-pipeless-text",
  },
  {
    "line": 22,
    "type": "newline",
  },
  {
    "buffer": true,
    "line": 22,
    "type": "comment",
    "val": "if IE lt 9",
  },
  {
    "line": 22,
    "type": "start-pipeless-text",
  },
  {
    "line": 23,
    "type": "text",
    "val": "// inline",
  },
  {
    "line": 24,
    "type": "newline",
  },
  {
    "line": 24,
    "type": "text",
    "val": "script(src='/lame.js')",
  },
  {
    "line": 25,
    "type": "newline",
  },
  {
    "line": 25,
    "type": "text",
    "val": "// end-inline",
  },
  {
    "line": 26,
    "type": "newline",
  },
  {
    "line": 26,
    "type": "text",
    "val": "",
  },
  {
    "line": 26,
    "type": "end-pipeless-text",
  },
  {
    "line": 27,
    "type": "newline",
  },
  {
    "line": 31,
    "type": "newline",
  },
  {
    "line": 32,
    "type": "newline",
  },
  {
    "line": 32,
    "type": "text",
    "val": " ",
  },
  {
    "line": 33,
    "type": "newline",
  },
  {
    "line": 33,
    "type": "text",
    "val": "asfd",
  },
  {
    "line": 35,
    "type": "newline",
  },
  {
    "line": 35,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 35,
    "type": "text",
    "val": "five",
  },
  {
    "line": 37,
    "type": "newline",
  },
  {
    "line": 37,
    "type": "class",
    "val": "foo",
  },
  {
    "line": 37,
    "type": "text",
    "val": "// not a comment",
  },
  {
    "line": 38,
    "type": "newline",
  },
  {
    "line": 38,
    "type": "eos",
  },
]
`;

exports[`comments.input.json 2`] = `
[
  {
    "line": 2,
    "type": "newline",
  },
  {
    "line": 3,
    "type": "newline",
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "ul",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 2,
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 5,
    "type": "text",
    "val": "one",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 7,
    "type": "text",
    "val": "two",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "line": 13,
    "type": "newline",
  },
  {
    "line": 17,
    "type": "newline",
  },
  {
    "line": 22,
    "type": "newline",
  },
  {
    "line": 27,
    "type": "newline",
  },
  {
    "buffer": false,
    "line": 27,
    "type": "comment",
    "val": "",
  },
  {
    "line": 28,
    "type": "text",
    "val": "",
  },
  {
    "line": 28,
    "type": "start-pipeless-text",
  },
  {
    "line": 29,
    "type": "text",
    "val": "asfd",
  },
  {
    "line": 30,
    "type": "newline",
  },
  {
    "line": 30,
    "type": "text",
    "val": "",
  },
  {
    "line": 30,
    "type": "end-pipeless-text",
  },
  {
    "line": 31,
    "type": "newline",
  },
  {
    "buffer": false,
    "line": 31,
    "type": "comment",
    "val": "",
  },
  {
    "line": 32,
    "type": "newline",
  },
  {
    "line": 32,
    "type": "text",
    "val": " ",
  },
  {
    "line": 33,
    "type": "newline",
  },
  {
    "line": 33,
    "type": "text",
    "val": "asfd",
  },
  {
    "line": 35,
    "type": "newline",
  },
  {
    "line": 35,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 35,
    "type": "text",
    "val": "five",
  },
  {
    "line": 37,
    "type": "newline",
  },
  {
    "line": 37,
    "type": "class",
    "val": "foo",
  },
  {
    "line": 37,
    "type": "text",
    "val": "// not a comment",
  },
  {
    "line": 38,
    "type": "newline",
  },
  {
    "line": 38,
    "type": "eos",
  },
]
`;

exports[`comments.input.json 3`] = `
[
  {
    "line": 2,
    "type": "newline",
  },
  {
    "line": 3,
    "type": "newline",
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "ul",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 2,
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 5,
    "type": "text",
    "val": "one",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "selfClosing": false,
    "type": "tag",
    "val": "li",
  },
  {
    "line": 7,
    "type": "text",
    "val": "two",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "line": 13,
    "type": "newline",
  },
  {
    "line": 17,
    "type": "newline",
  },
  {
    "line": 22,
    "type": "newline",
  },
  {
    "line": 27,
    "type": "newline",
  },
  {
    "line": 31,
    "type": "newline",
  },
  {
    "line": 32,
    "type": "newline",
  },
  {
    "line": 32,
    "type": "text",
    "val": " ",
  },
  {
    "line": 33,
    "type": "newline",
  },
  {
    "line": 33,
    "type": "text",
    "val": "asfd",
  },
  {
    "line": 35,
    "type": "newline",
  },
  {
    "line": 35,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 35,
    "type": "text",
    "val": "five",
  },
  {
    "line": 37,
    "type": "newline",
  },
  {
    "line": 37,
    "type": "class",
    "val": "foo",
  },
  {
    "line": 37,
    "type": "text",
    "val": "// not a comment",
  },
  {
    "line": 38,
    "type": "newline",
  },
  {
    "line": 38,
    "type": "eos",
  },
]
`;

exports[`comments.source.input.json 1`] = `
[
  {
    "line": 4,
    "type": "newline",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "line": 9,
    "type": "eos",
  },
]
`;

exports[`comments.source.input.json 2`] = `
[
  {
    "buffer": false,
    "line": 1,
    "type": "comment",
    "val": "",
  },
  {
    "line": 1,
    "type": "start-pipeless-text",
  },
  {
    "line": 2,
    "type": "text",
    "val": "s/s.",
  },
  {
    "line": 3,
    "type": "newline",
  },
  {
    "line": 3,
    "type": "text",
    "val": "",
  },
  {
    "line": 3,
    "type": "end-pipeless-text",
  },
  {
    "line": 4,
    "type": "newline",
  },
  {
    "buffer": false,
    "line": 4,
    "type": "comment",
    "val": " test/cases/comments.source.pug",
  },
  {
    "line": 5,
    "type": "text",
    "val": "",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "buffer": false,
    "line": 6,
    "type": "comment",
    "val": "",
  },
  {
    "line": 6,
    "type": "start-pipeless-text",
  },
  {
    "line": 7,
    "type": "text",
    "val": "test/cases/comments.source.pug",
  },
  {
    "line": 8,
    "type": "newline",
  },
  {
    "line": 8,
    "type": "text",
    "val": "when",
  },
  {
    "line": 9,
    "type": "newline",
  },
  {
    "line": 9,
    "type": "text",
    "val": "()",
  },
  {
    "line": 9,
    "type": "end-pipeless-text",
  },
  {
    "line": 9,
    "type": "eos",
  },
]
`;

exports[`comments.source.input.json 3`] = `
[
  {
    "line": 4,
    "type": "newline",
  },
  {
    "line": 6,
    "type": "newline",
  },
  {
    "line": 9,
    "type": "eos",
  },
]
`;

exports[`comments-in-case.input.json 1`] = `
[
  {
    "line": 1,
    "type": "doctype",
    "val": "html",
  },
  {
    "line": 2,
    "type": "newline",
  },
  {
    "line": 2,
    "selfClosing": false,
    "type": "tag",
    "val": "html",
  },
  {
    "line": 3,
    "type": "indent",
    "val": 2,
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "body",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 3,
  },
  {
    "buffer": false,
    "escape": false,
    "line": 4,
    "type": "code",
    "val": "var s = 'this'",
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "type": "case",
    "val": "s",
  },
  {
    "line": 6,
    "type": "indent",
    "val": 5,
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "type": "when",
    "val": "'this'",
  },
  {
    "line": 8,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 8,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 8,
    "type": "text",
    "val": "It's this!",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "line": 9,
    "type": "when",
    "val": "'that'",
  },
  {
    "line": 10,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 10,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 10,
    "type": "text",
    "val": "It's that!",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "eos",
  },
]
`;

exports[`comments-in-case.input.json 2`] = `
[
  {
    "line": 1,
    "type": "doctype",
    "val": "html",
  },
  {
    "line": 2,
    "type": "newline",
  },
  {
    "line": 2,
    "selfClosing": false,
    "type": "tag",
    "val": "html",
  },
  {
    "line": 3,
    "type": "indent",
    "val": 2,
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "body",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 3,
  },
  {
    "buffer": false,
    "escape": false,
    "line": 4,
    "type": "code",
    "val": "var s = 'this'",
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "type": "case",
    "val": "s",
  },
  {
    "line": 6,
    "type": "indent",
    "val": 5,
  },
  {
    "buffer": false,
    "line": 6,
    "type": "comment",
    "val": " Comment",
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "type": "when",
    "val": "'this'",
  },
  {
    "line": 8,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 8,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 8,
    "type": "text",
    "val": "It's this!",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "line": 9,
    "type": "when",
    "val": "'that'",
  },
  {
    "line": 10,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 10,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 10,
    "type": "text",
    "val": "It's that!",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "eos",
  },
]
`;

exports[`comments-in-case.input.json 3`] = `
[
  {
    "line": 1,
    "type": "doctype",
    "val": "html",
  },
  {
    "line": 2,
    "type": "newline",
  },
  {
    "line": 2,
    "selfClosing": false,
    "type": "tag",
    "val": "html",
  },
  {
    "line": 3,
    "type": "indent",
    "val": 2,
  },
  {
    "line": 3,
    "selfClosing": false,
    "type": "tag",
    "val": "body",
  },
  {
    "line": 4,
    "type": "indent",
    "val": 3,
  },
  {
    "buffer": false,
    "escape": false,
    "line": 4,
    "type": "code",
    "val": "var s = 'this'",
  },
  {
    "line": 5,
    "type": "newline",
  },
  {
    "line": 5,
    "type": "case",
    "val": "s",
  },
  {
    "line": 6,
    "type": "indent",
    "val": 5,
  },
  {
    "line": 7,
    "type": "newline",
  },
  {
    "line": 7,
    "type": "when",
    "val": "'this'",
  },
  {
    "line": 8,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 8,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 8,
    "type": "text",
    "val": "It's this!",
  },
  {
    "line": 9,
    "type": "outdent",
  },
  {
    "line": 9,
    "type": "when",
    "val": "'that'",
  },
  {
    "line": 10,
    "type": "indent",
    "val": 7,
  },
  {
    "line": 10,
    "selfClosing": false,
    "type": "tag",
    "val": "p",
  },
  {
    "line": 10,
    "type": "text",
    "val": "It's that!",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "outdent",
  },
  {
    "line": 10,
    "type": "eos",
  },
]
`;

exports[`end.input.json 1`] = `
{
  "code": "PUG:UNEXPECTED_TOKEN",
  "line": 4,
  "msg": "\`end-pipeless-text\` encountered when not in pipeless text mode",
}
`;

exports[`startstart.input.json 1`] = `
{
  "code": "PUG:UNEXPECTED_TOKEN",
  "line": 3,
  "msg": "\`start-pipeless-text\` encountered when already in pipeless text mode",
}
`;
